# xf

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.sh  clean.sh  cmake_install.cmake  server_into.sh  server_start.sh  wordlist.txt
Dockerfile/: Dockerfile
config/: call.bnf  robot_arm.ini
msc/a28fce4ef2e7eac50fd260979e6de32d/: cfg.ldata
samples/asr_offline_record_sample/: asr_offline_record_sample.cpp  audio.c  audio.h
samples/asr_offline_sample/: asr_offline_sample.c
samples/audio/: Makefile  audio.c
samples/awaken_offline_sample/: Makefile  awaken_offline_sample.c
samples/main_sample/: Makefile  main.cpp  xf.cpp  xf.h
samples/serial/: Makefile  serial.c
samples/tts_offline_sample/: Makefile  tts_offline_sample.c
src/: main.cpp
src/LLog/: LLog.cpp  LLog.h
src/common/ini/: iniconfig.cpp  iniconfig.h
src/common/serial_communication/: serial_communication.cpp  serial_communication.h
src/common/tcp_client/: central_server_tcp.cpp  central_server_tcp.h  tcp_client.cpp  tcp_client.h
src/common/udp_client/: udp_client.cpp  udp_client.h
src/common/work_base/: work_base.cpp  work_base.h
src/component/chassis_device/yixin_chassis_device/: yixin_chassis.cpp  yixin_chassis.h
src/component/gas_detection/: gas_detection.cpp  gas_detection.h
src/component/nuclear_radiation_measuring/: nuclear_radiation_measuring.cpp  nuclear_radiation_measuring.h
src/component/robot_arm_device/dz_robot_arm/: dz_robot_arm.cpp  dz_robot_arm.h
src/component/robot_arm_device/dz_robot_arm/include/: HR_Pro.h
src/component/xf/: README.md  audio.c  speech_recognizer.c  speech_recognizer.h  xf.cpp  xf.h
src/robots/xiaohai_robot/: xiaohai_robot.cpp  xiaohai_robot.h
